# YOLOX-ROS

yolox_ros_cpp/: README.md
yolox_ros_cpp/docker/tensorrt/: dockerfile  ros_entrypoint.sh
yolox_ros_cpp/yolox_cpp/: CMakeLists.txt  package.xml
yolox_ros_cpp/yolox_cpp/src/: yolox_tensorrt.cpp
yolox_ros_cpp/yolox_ros_cpp/: CMakeLists.txt  package.xml
yolox_ros_cpp/yolox_ros_cpp/include/yolox_ros_cpp/: yolox_ros_cpp.hpp
yolox_ros_cpp/yolox_ros_cpp/src/: yolox_ros_cpp.cpp
