<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolox_ros_cpp</name>
  <version>0.2.1</version>
  <description>The yolox_ros_cpp package</description>
  <maintainer email="53618876+fateshelled@users.noreply.github.com">fateshelled</maintainer>
  <license>Apache-2.0 License</license>
  <author email="53618876+fateshelled@users.noreply.github.com">fateshelled</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <!-- <depend>roscpp_components</depend> -->
  <depend>OpenCV</depend>
  <depend>cv_bridge</depend>
  <depend>nodelet</depend>
  <depend>image_transport</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <build_depend>bboxes_ex_msgs</build_depend>
  <exec_depend>bboxes_ex_msgs</exec_depend>
  <depend>yolox_cpp</depend>
  


</package>
